plugins {
    id 'java-library'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}
apply plugin: 'groovy'
apply plugin: 'maven-publish'
group = 'com.github.KrisNorrell'
version = '3.0'
description = 'BedAdditions'

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(17))
    }
}

repositories {
    mavenCentral()
    maven {
        url = uri('https://oss.sonatype.org/content/groups/public/')
    }

    maven {
        url = uri('https://hub.spigotmc.org/nexus/content/repositories/snapshots/')
    }

    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}

dependencies {
    implementation 'com.zaxxer:HikariCP:4.0.3'
    implementation 'org.mariadb.jdbc:mariadb-java-client:3.1.4'
    compileOnly 'org.spigotmc:spigot-api:1.20.1-R0.1-SNAPSHOT'
    // https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin
}
shadowJar {
    archiveFileName = project.description + ".jar"
    dependencies {
        include(dependency('com.zaxxer:HikariCP'))
        include(dependency('org.mariadb.jdbc:mariadb-java-client'))
    }
    relocate('com.zaxxer', 'me.bedpotato.libs.zaxxer')
    relocate('org.mariadb.jdbc', 'me.bedpotato.libs.mariadb')
}
publishing {
    publications {
        mavenJava(MavenPublication) {
            artifactId = 'BedAdditions'

            from components.java
        }
    }
}

